--- a/main.html
+++ b/main.html
@@ -6,14 +6,17 @@
   </head>
 
   <body>
-    <form>
-		  <input type="number" id="age" required>
-		  <input type ="text" id = "name" required>
-		  <button type="submit" id="btn">Submit</button>
-	  </form>
+    <!-- write the body here -->
+<form id="myForm">
+	<label for="name">Name:</label>
+	<input type="text" id="name" name="name" required>
 
+	<label for="age">Age:</label>
+	<input type="number" id="age" name="age" required>
+
+	<button type="submit" id="btn">Submit</button>
+	
     <script type="text/javascript" src="./script.js"></script>
   </body>
 </html>
-
-
+           
